Updated academic.html and personal.html with structured content

--- a/index.html
+++ b/index.html
@@ -3,47 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wenhong (Tony) Sun - Portfolio</title>
+    <title>Wenhong (Tony) Sun</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="intro">
         <h1>Hi, my name is 孙文宏 (romanized: Wenhong Sun).</h1>
         <p>In English-speaking environments, I often go by <strong>Tony Sun</strong>, a name I like and find easy to connect with others.</p>
-        
-        <h2>Academic and Professional Background</h2>
         <p>
-            I entered the <strong>University of California, Los Angeles (UCLA)</strong> as an Economics major after earning first place in the 
-            <strong>2020 International Economics Olympiad China Final</strong> in high school. Early in my undergraduate studies, I realized that achieving 
-            my high school dream of becoming an economist required a stronger foundation in mathematics and statistics. This led me to switch to a double major 
-            in <strong>Mathematics/Economics</strong> and <strong>Statistics & Data Science</strong>, fields that have significantly broadened my analytical perspective.
-        </p>
-        <p>
-            While I initially enjoyed the theoretical aspects of economics, I found myself drawn to finance, where outcomes can be objectively measured by profits and losses. 
-            Over time, my interests shifted toward <strong>quantitative finance</strong>, a field that merges financial analysis with advanced mathematical and statistical techniques. 
-            It’s an extremely competitive discipline, attracting some of the brightest minds, and I’m motivated to contribute meaningfully to it. To meet the challenges of this rigorous 
-            field, I continuously refine my technical skills and expand my knowledge base with these 
-            <a href="coursework.html">courses</a> and <a href="projects.html">projects</a>.
-        </p>
-        
-        <h2>Personal Background</h2>
-        <p>
-            I grew up in <strong>Chengdu, China</strong>, a city famous for its rich history. The city itself dates back to <strong>367 BC</strong>, and my high school recently celebrated 
-            its <strong>2,160th anniversary</strong>, having been founded in <strong>141 BC</strong>. Chengdu is also home to the world-famous <strong>Panda Research Center</strong>, 
-            where hundreds of pandas are cared for, and its <strong>hotpot</strong> is a must-try culinary experience.
-        </p>
-        <p>
-            Outside of academics, I’m a die-hard <strong>Chelsea Football Club</strong> fan—a passion that started in 2014 when I visited <strong>Stamford Bridge</strong> for the first time. 
-            While my childhood dream was to become a football commentator, I’ve long accepted that I’m better at watching football than playing it. However, I do have a knack for <strong>tennis</strong>, 
-            a sport I’ve been playing since I was nine. Since moving to the U.S. for college, I’ve also developed a love for <strong>hockey</strong> and now closely follow the NHL.
-        </p>
-        <p>
-            Beyond sports, I’m an avid <strong>movie enthusiast</strong>, particularly drawn to the works of <strong>Denis Villeneuve</strong> and <strong>Christopher Nolan</strong>. 
-            I also have a passion for <strong>photography</strong>—while I used to bring my <strong>Fujifilm XPro3</strong> on every trip, I’ve recently embraced the convenience of phone photography, 
-            carrying my camera less often but still capturing moments wherever I go.
+            Learn more about my 
+            <a href="academic.html">Academic and Professional Background</a> 
+            and 
+            <a href="personal.html">Personal Background</a>.
         </p>
     </section>
 
-    <p><a href="coursework.html">See my coursework</a> | <a href="projects.html">See my projects</a></p>
+    <section class="gallery">
+        <img src="photos/1-Chengdu-1.jpg" alt="Image 1">
+        <img src="photos/1-Chengdu-2.jpg" alt="Image 2">
+        <img src="photos/1-Chengdu-3.jpg" alt="Image 3">
+        <img src="photos/1-Chengdu-4.jpg" alt="Image 4">
+    </section>
 </body>
 </html>
