--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </section>
 
     <section class="gallery">
-        <img src="photos/1-Chengdu-1.jpg" alt="Image 1">
-        <img src="photos/1-Chengdu-2.jpg" alt="Image 2">
-        <img src="photos/1-Chengdu-3.jpg" alt="Image 3">
-        <img src="photos/1-Chengdu-4.jpg" alt="Image 4">
+        <img src="photos/1-Chengdu-1.JPG" alt="Image 1">
+        <img src="photos/1-Chengdu-2.JPG" alt="Image 2">
+        <img src="photos/1-Chengdu-3.JPG" alt="Image 3">
+        <img src="photos/1-Chengdu-4.JPG" alt="Image 4">
     </section>
 </body>
 </html>
