--- a/index.html
+++ b/index.html
@@ -20,31 +20,23 @@
     </section>
 
 <section class="gallery">
-    <figure>
-        <picture><source srcset="photos/Travel-6.webp" type="image/webp"><img src="photos/Travel-6.JPG" alt="Travel 6"></picture>
-        <figcaption>Travel 6 - A beautiful moment captured</figcaption>
-    </figure>
-    <figure>
-        <picture><source srcset="photos/Travel-5.webp" type="image/webp"><img src="photos/Travel-5.JPG" alt="Travel 5"></picture>
-        <figcaption>Travel 5 - Sunset over the horizon</figcaption>
-    </figure>
-    <figure>
-        <picture><source srcset="photos/Travel-4.webp" type="image/webp"><img src="photos/Travel-4.JPG" alt="Travel 4"></picture>
-        <figcaption>Travel 4 - Exploring new places</figcaption>
-    </figure>
-    <figure>
-        <picture><source srcset="photos/Travel-3.webp" type="image/webp"><img src="photos/Travel-3.JPG" alt="Travel 3"></picture>
-        <figcaption>Travel 3 - A scenic view</figcaption>
-    </figure>
-    <figure>
-        <picture><source srcset="photos/3-Travel-2.webp" type="image/webp"><img src="photos/3-Travel-2.JPG" alt="Travel 2"></picture>
-        <figcaption>Travel 2 - Capturing memories</figcaption>
-    </figure>
-    <figure>
-        <picture><source srcset="photos/3-Travel-1.webp" type="image/webp"><img src="photos/3-Travel-1.JPG" alt="Travel 1"></picture>
-        <figcaption>Travel 1 - The journey begins</figcaption>
-    </figure>
+    <picture><source srcset="photos/Travel-6.webp" type="image/webp"><img src="photos/Travel-6.JPG" alt="Travel 6"></picture>
+    <picture><source srcset="photos/Travel-5.webp" type="image/webp"><img src="photos/Travel-5.JPG" alt="Travel 5"></picture>
+    <picture><source srcset="photos/Travel-4.webp" type="image/webp"><img src="photos/Travel-4.JPG" alt="Travel 4"></picture>
+    <picture><source srcset="photos/Travel-3.webp" type="image/webp"><img src="photos/Travel-3.JPG" alt="Travel 3"></picture>
+    <picture><source srcset="photos/3-Travel-2.webp" type="image/webp"><img src="photos/3-Travel-2.JPG" alt="Travel 2"></picture>
+    <picture><source srcset="photos/3-Travel-1.webp" type="image/webp"><img src="photos/3-Travel-1.JPG" alt="Travel 1"></picture>
+    <picture><source srcset="photos/2-LA-5.webp" type="image/webp"><img src="photos/2-LA-5.JPG" alt="LA 5"></picture>
+    <picture><source srcset="photos/2-LA-4.webp" type="image/webp"><img src="photos/2-LA-4.JPG" alt="LA 4"></picture>
+    <picture><source srcset="photos/2-LA-3.webp" type="image/webp"><img src="photos/2-LA-3.JPG" alt="LA 3"></picture>
+    <picture><source srcset="photos/2-LA-2.webp" type="image/webp"><img src="photos/2-LA-2.JPG" alt="LA 2"></picture>
+    <picture><source srcset="photos/2-LA-1.webp" type="image/webp"><img src="photos/2-LA-1.JPG" alt="LA 1"></picture>
+    <picture><source srcset="photos/1-Chengdu-4.webp" type="image/webp"><img src="photos/1-Chengdu-4.JPG" alt="Chengdu 4"></picture>
+    <picture><source srcset="photos/1-Chengdu-3.webp" type="image/webp"><img src="photos/1-Chengdu-3.JPG" alt="Chengdu 3"></picture>
+    <picture><source srcset="photos/1-Chengdu-2.webp" type="image/webp"><img src="photos/1-Chengdu-2.JPG" alt="Chengdu 2"></picture>
+    <picture><source srcset="photos/1-Chengdu-1.webp" type="image/webp"><img src="photos/1-Chengdu-1.JPG" alt="Chengdu 1"></picture>
 </section>
+
 
     
     
