--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <section class="intro">
-        <h1>Hi, my name is 孙文宏 (romanized: Wenhong Sun).</h1>
-        <p>In English-speaking environments, I often go by <strong>Tony Sun</strong>, a name I like and find easy to connect with others.</p>
+        <h1>Hi there, welcome to my homepage!</h1>
+        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>, a name I like to use in English-speaking environments.</p>
         <p>
-            Learn more about my 
+            If you're interested in learning more, feel free to explore my 
             <a href="academic.html">Academic and Professional Background</a> 
-            and 
+            or 
             <a href="personal.html">Personal Background</a>.
+        </p>
+        <p>
+            In the meantime, please feel free to browse through my photography collection from over the years—I hope you enjoy them!
         </p>
     </section>
 
