--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <a href="personal.html">Personal Background</a>.
         </p>
         <p>
+            <span class="small-text">
             In the meantime, please feel free to browse through my photography collection from over the years—I hope you enjoy them!
+            </span>
         </p>
     </section>
 
