Added contact section to homepage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <section class="intro">
         <h1>Hi there, welcome to my homepage!</h1>
-        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>, a name I like to use in English-speaking environments.</p>
-        <p>
+        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>, a name I like to use in English-speaking environments.
             If you're interested in learning more, feel free to explore my 
             <a href="academic.html">Academic and Professional Background</a> 
             or 
@@ -42,7 +41,12 @@
     <picture><source srcset="photos/1-Chengdu-1.webp" type="image/webp"><img src="photos/1-Chengdu-1.JPG" alt="Chengdu 1"></picture>
 </section>
 
-
+<!-- Contact Section -->
+<section class="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:whsun@ucla.edu">whsun@ucla.edu</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/wenhong-tony-sun/" target="_blank">Wenhong (Tony) Sun</a></p>
+</section>
     
     
 </body>
