add profile pic

--- a/academic.html
+++ b/academic.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
+    <section class="profile">
+        <img src="photos/academic-profile.jpg" alt="Academic Profile Picture">
+    </section>
+    
     <section class="content">
         <h1>Academic and Professional Background</h1>
         <p>
