add profile pic

--- a/personal.html
+++ b/personal.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
+    <section class="profile">
+        <img src="photos/personal-profile.jpg" alt="Personal Profile Picture">
+    </section>
+
     <section class="content">
         <h1>Personal Background</h1>
         <p>
