Made profile picture smaller and wrapped text around it

--- a/academic.html
+++ b/academic.html
@@ -7,20 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <section class="profile">
-        <img src="photos/academic-profile.jpg" alt="Academic Profile Picture">
-    </section>
-    
+
     <section class="content">
-        <h1>Academic and Professional Background</h1>
-        <p>
-            I entered the <strong>University of California, Los Angeles (UCLA)</strong> as an Economics major after earning first place in the 
-            <strong>2020 International Economics Olympiad China Final</strong> in high school. Early in my undergraduate studies, I realized that achieving 
-            my high school dream of becoming an economist required a stronger foundation in mathematics and statistics. This realization led me to transition 
-            to a double major in <strong>Mathematics/Economics</strong> and <strong>Statistics & Data Science</strong>, both of which have significantly 
-            broadened my analytical perspective.
-        </p>
+        <div class="profile">
+            <img src="photos/academic-profile.jpg" alt="Academic Profile Picture" class="profile-pic">
+            <div class="text-content">
+                <h1>Academic and Professional Background</h1>
+                <p>
+                    I entered the <strong>University of California, Los Angeles (UCLA)</strong> as an Economics major after earning first place in the 
+                    <strong>2020 International Economics Olympiad China Final</strong> in high school. Early in my undergraduate studies, I realized that achieving 
+                    my high school dream of becoming an economist required a stronger foundation in mathematics and statistics. This realization led me to transition 
+                    to a double major in <strong>Mathematics/Economics</strong> and <strong>Statistics & Data Science</strong>, both of which have significantly 
+                    broadened my analytical perspective.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="content">
         <p>
             While I initially enjoyed the theoretical aspects of economics, I became increasingly drawn to finance, where outcomes can be objectively measured by profits and losses. 
             Over time, my interests evolved toward <strong>quantitative finance</strong>, a discipline that merges financial analysis with advanced mathematical and statistical techniques. 
