--- a/personal.html
+++ b/personal.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <section class="profile">
-        <img src="photos/personal-profile.jpg" alt="Personal Profile Picture">
-    </section>
 
     <section class="content">
         <h1>Personal Background</h1>
+        <img src="photos/personal-profile.jpg" alt="Personal Profile Picture" class="profile-pic">
         <p>
             I grew up in <strong>Chengdu, China</strong>, a city deeply rooted in history and culture. Chengdu itself dates back to <strong>367 BC</strong>, and my high school 
             recently celebrated its <strong>2,160th anniversary</strong>, having been founded in <strong>141 BC</strong>. The city is home to the world-famous 
