--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <picture><source srcset="photos/2-LA-2.webp" type="image/webp"><img src="photos/2-LA-2.JPG" alt="LA 2"></picture>
     <picture><source srcset="photos/2-LA-1.webp" type="image/webp"><img src="photos/2-LA-1.JPG" alt="LA 1"></picture>
     <picture><source srcset="photos/1-Chengdu-4.webp" type="image/webp"><img src="photos/1-Chengdu-4.JPG" alt="Chengdu 4"></picture>
+    <picture><source srcset="photos/Travel-7.webp" type="image/webp"><img src="photos/Travel-7.JPG" alt="Travel 7"></picture>
     <picture><source srcset="photos/1-Chengdu-3.webp" type="image/webp"><img src="photos/1-Chengdu-3.JPG" alt="Chengdu 3"></picture>
     <picture><source srcset="photos/1-Chengdu-2.webp" type="image/webp"><img src="photos/1-Chengdu-2.JPG" alt="Chengdu 2"></picture>
     <picture><source srcset="photos/1-Chengdu-1.webp" type="image/webp"><img src="photos/1-Chengdu-1.JPG" alt="Chengdu 1"></picture>
