--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="intro">
-        <h1>Hi there, welcome to my homepage!</h1>
+        <h1>Hi, welcome to my homepage!</h1>
         <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>, a name I like to use in English-speaking environments.
             If you're interested in learning more, feel free to explore my 
             <a href="academic.html">Academic and Professional Background</a> 
@@ -24,15 +24,16 @@
     </section>
 
 <section class="gallery">
-    <picture><source srcset="photos/Travel-6.webp" type="image/webp"><img src="photos/Travel-6.JPG" alt="Travel 6"></picture>
+    
     <picture><source srcset="photos/Travel-5.webp" type="image/webp"><img src="photos/Travel-5.JPG" alt="Travel 5"></picture>
     <picture><source srcset="photos/Travel-4.webp" type="image/webp"><img src="photos/Travel-4.JPG" alt="Travel 4"></picture>
+    <picture><source srcset="photos/2-LA-3.webp" type="image/webp"><img src="photos/2-LA-3.JPG" alt="LA 3"></picture>
     <picture><source srcset="photos/Travel-3.webp" type="image/webp"><img src="photos/Travel-3.JPG" alt="Travel 3"></picture>
+    <picture><source srcset="photos/Travel-6.webp" type="image/webp"><img src="photos/Travel-6.JPG" alt="Travel 6"></picture>
     <picture><source srcset="photos/3-Travel-2.webp" type="image/webp"><img src="photos/3-Travel-2.JPG" alt="Travel 2"></picture>
     <picture><source srcset="photos/3-Travel-1.webp" type="image/webp"><img src="photos/3-Travel-1.JPG" alt="Travel 1"></picture>
     <picture><source srcset="photos/2-LA-5.webp" type="image/webp"><img src="photos/2-LA-5.JPG" alt="LA 5"></picture>
     <picture><source srcset="photos/2-LA-4.webp" type="image/webp"><img src="photos/2-LA-4.JPG" alt="LA 4"></picture>
-    <picture><source srcset="photos/2-LA-3.webp" type="image/webp"><img src="photos/2-LA-3.JPG" alt="LA 3"></picture>
     <picture><source srcset="photos/2-LA-2.webp" type="image/webp"><img src="photos/2-LA-2.JPG" alt="LA 2"></picture>
     <picture><source srcset="photos/2-LA-1.webp" type="image/webp"><img src="photos/2-LA-1.JPG" alt="LA 1"></picture>
     <picture><source srcset="photos/1-Chengdu-4.webp" type="image/webp"><img src="photos/1-Chengdu-4.JPG" alt="Chengdu 4"></picture>
