change photo names

--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
         </p>
     </section>
 
-<section class="gallery">
+    <section class="gallery">
     
-    <picture><source srcset="photos/Travel-5.webp" type="image/webp"><img src="photos/Travel-5.JPG" alt="Travel 5"></picture>
-    <picture><source srcset="photos/Travel-4.webp" type="image/webp"><img src="photos/Travel-4.JPG" alt="Travel 4"></picture>
-    <picture><source srcset="photos/2-LA-3.webp" type="image/webp"><img src="photos/2-LA-3.JPG" alt="LA 3"></picture>
-    <picture><source srcset="photos/Travel-3.webp" type="image/webp"><img src="photos/Travel-3.JPG" alt="Travel 3"></picture>
-    <picture><source srcset="photos/Travel-6.webp" type="image/webp"><img src="photos/Travel-6.JPG" alt="Travel 6"></picture>
-    <picture><source srcset="photos/3-Travel-2.webp" type="image/webp"><img src="photos/3-Travel-2.JPG" alt="Travel 2"></picture>
-    <picture><source srcset="photos/3-Travel-1.webp" type="image/webp"><img src="photos/3-Travel-1.JPG" alt="Travel 1"></picture>
-    <picture><source srcset="photos/2-LA-5.webp" type="image/webp"><img src="photos/2-LA-5.JPG" alt="LA 5"></picture>
-    <picture><source srcset="photos/2-LA-4.webp" type="image/webp"><img src="photos/2-LA-4.JPG" alt="LA 4"></picture>
-    <picture><source srcset="photos/2-LA-2.webp" type="image/webp"><img src="photos/2-LA-2.JPG" alt="LA 2"></picture>
-    <picture><source srcset="photos/2-LA-1.webp" type="image/webp"><img src="photos/2-LA-1.JPG" alt="LA 1"></picture>
-    <picture><source srcset="photos/1-Chengdu-4.webp" type="image/webp"><img src="photos/1-Chengdu-4.JPG" alt="Chengdu 4"></picture>
-    <picture><source srcset="photos/Travel-7.webp" type="image/webp"><img src="photos/Travel-7.JPG" alt="Travel 7"></picture>
-    <picture><source srcset="photos/1-Chengdu-3.webp" type="image/webp"><img src="photos/1-Chengdu-3.JPG" alt="Chengdu 3"></picture>
-    <picture><source srcset="photos/1-Chengdu-2.webp" type="image/webp"><img src="photos/1-Chengdu-2.JPG" alt="Chengdu 2"></picture>
-    <picture><source srcset="photos/1-Chengdu-1.webp" type="image/webp"><img src="photos/1-Chengdu-1.JPG" alt="Chengdu 1"></picture>
-</section>
+        <picture><source srcset="photos/twilight-at-fortress.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/arrowhead-lake-fog.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/santa-monica-portrait.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/truck-at-dusk.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/fortress-puerto-rico.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/lighthouse.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/dolphin.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/tree.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/la-skyline-daylight.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/griffith.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/la-city-light.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/chengdu-city-light.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/caltech-architecture.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/trad-architecture.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/leshan.webp" type="image/webp"></picture>
+        <picture><source srcset="photos/panda.webp" type="image/webp"></picture>
+    </section>
+    
 
 <!-- Contact Section -->
 <section class="contact">
