Updated multiple pages: index, coursework, personal, academic, projects, and added analytics tracking

--- a/academic.html
+++ b/academic.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic and Professional Background</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Load Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSEQT53CPJ"></script>
+    <script src="analytics.js"></script>
 </head>
 <body>
 
@@ -30,19 +34,7 @@
             <a href="coursework.html">coursework</a> and <a href="projects.html">projects</a>.
         </p>
 
-        <h2>Research & Work Experience</h2>
-        <p>
-            My academic journey has been complemented by hands-on research and professional experience that have honed my problem-solving and computational skills.
-        </p>
-        <ul>
-            <li><strong>Computational Biology Research:</strong> Applied deep learning techniques to track bacterial movements in Professor Wong’s lab at UCLA.</li>
-            <li><strong>Statistical Consulting:</strong> Provided data-driven solutions for real-world business and research problems in UCLA’s Statistical Consulting course.</li>
-            <li><strong>Finance and Trading:</strong> Developed Python-based trade matching automation and explored risk management strategies.</li>
-        </ul>
-
-        <p>
-            Learn more about my <a href="projects.html">projects</a> and <a href="coursework.html">coursework</a>.
-        </p>
+    
         <p><a href="index.html">Back to Home</a></p>
     </section>
 
