--- a/coursework.html
+++ b/coursework.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coursework - Wenhong (Tony) Sun</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Load Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSEQT53CPJ"></script>
+    <script src="analytics.js"></script>
+    
 </head>
 <body>
     <section id="coursework-at-ucla" class="content">
