--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Wenhong (Tony) Sun</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- Load Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSEQT53CPJ"></script>
+    <script src="analytics.js"></script>
 </head>
 <body>
     <section class="intro">
