--- a/personal.html
+++ b/personal.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Background</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Load Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSEQT53CPJ"></script>
+    <script src="analytics.js"></script>
 </head>
 <body>
 
