--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="gallery">
         <picture>
             <source srcset="photos/twilight-at-fortress.webp" type="image/webp">
-            <img src="photos/twilight-at-fortress.webp" alt="Twilight at Fortress">
+            <img src="photos/twilight-at-fortress.webp" alt="Twilight at Fortress" title="San Juan, Puerto Rico">
         </picture>
         <picture>
             <source srcset="photos/arrowhead-lake-fog.webp" type="image/webp">
