--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </section>
 
     <section class="gallery">
-        <picture>
+        <picture title="San Juan, Puerto Rico">
             <source srcset="photos/twilight-at-fortress.webp" type="image/webp">
-            <img src="photos/twilight-at-fortress.webp" alt="Twilight at Fortress" title="San Juan, Puerto Rico">
+            <img src="photos/twilight-at-fortress.webp" alt="Twilight at Fortress" >
         </picture>
         <picture>
             <source srcset="photos/arrowhead-lake-fog.webp" type="image/webp">
