--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section class="gallery">
-        <picture title="San Juan, Puerto Rico">
+        <picture data-location="San Juan, Puerto Rico">
             <source srcset="photos/twilight-at-fortress.webp" type="image/webp">
             <img src="photos/twilight-at-fortress.webp" alt="Twilight at Fortress" >
         </picture>
