--- a/personal.html
+++ b/personal.html
@@ -16,23 +16,23 @@
         <h1>Personal Background</h1>
         <img src="photos/personal-profile.jpg" alt="Personal Profile Picture" class="profile-pic">
         <p>
-            I grew up in <strong>Chengdu, China</strong>, a city deeply rooted in history and culture. Chengdu itself dates back to <strong>367 BC</strong>, and my high school 
-            recently celebrated its <strong>2,160th anniversary</strong>, having been founded in <strong>141 BC</strong>. The city is home to the world-famous 
-            <strong>Panda Research Center</strong>, where conservation efforts protect and study giant pandas. Chengdu is also renowned for its vibrant culinary scene, 
-            particularly its <strong>hotpot</strong>, a must-try for any visitor.
+            I grew up in Chengdu, Sichuan, China—a city famous for its rich history. The city itself dates back to 367 BC, and my high school recently celebrated its 2,160th anniversary, founded in 141 BC. 
+            Chengdu is also home to the world-famous Panda Research Center, where hundreds of pandas are cared for, and Chengdu’s hotpot is an iconic part of its culinary heritage. 
+            If you're in Los Angeles and craving authentic Sichuan hotpot, I recommend trying <a href="https://en.wikipedia.org/wiki/Haidilao">海底捞 (Haidilao)</a>—they have locations in many major cities in the US, though Chengdu boasts even better hotpot options.
         </p>
         <p>
-            I am a lifelong football fan and have supported <strong>Chelsea Football Club</strong> since 2014, when I had the unforgettable experience of visiting 
-            <strong>Stamford Bridge</strong>. Though my childhood dream was to become a football commentator, I have since accepted that I am better at watching football than playing it. 
-            That said, I have been playing <strong>tennis</strong> since I was nine and continue to enjoy it as a favorite pastime. Since moving to the U.S. for college, 
-            I have also developed a deep appreciation for <strong>hockey</strong> and now closely follow the NHL.
+            Football (soccer) has been one of my lifelong passions, with a deep-rooted love for Chelsea Football Club that began in 2014 after visiting Stamford Bridge for the first time. 
+            While my childhood dream was to become a football commentator, I’ve long accepted that I’m better at watching football than playing it. 
+            However, I do have a knack for tennis, a sport I’ve been playing since I was nine. 
+            Since moving to the U.S. for college, I’ve also developed a love for hockey and now closely follow the NHL.
         </p>
         <p>
-            I am an avid <strong>film enthusiast</strong>, particularly drawn to the works of 
-            <a href="https://en.wikipedia.org/wiki/Denis_Villeneuve">Denis Villeneuve</a> and <a href="https://en.wikipedia.org/wiki/Christopher_Nolan">Christopher Nolan</a>. 
-            Their ability to blend compelling narratives with visually stunning cinematography is something I deeply admire.
-            In addition to film, I have a passion for <strong>photography</strong>. While I used to bring my <strong>Fujifilm XPro3</strong> on every trip, 
-            I have recently embraced the convenience of mobile photography, capturing meaningful moments wherever I go.
+            Movies have always captivated me, particularly the works of
+            <a href="https://en.wikipedia.org/wiki/Denis_Villeneuve">Denis Villeneuve</a> and <a href="https://en.wikipedia.org/wiki/Christopher_Nolan">Christopher Nolan</a>
+            for their masterful storytelling and stunning visuals. 
+            I also have a passion for photography—while I used to bring my Fujifilm XPro3 on every trip, 
+            I’ve recently embraced the convenience of phone photography, 
+            carrying my camera less often but still capturing moments wherever I go.
         </p>
 
         <p><a href="index.html">Back to Home</a></p>
