--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 <body>
     <section class="intro">
         <h1>Hi, welcome to my homepage!</h1>
-        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>, a name I like to use in English-speaking environments.
-            If you're interested in learning more, feel free to explore my 
+        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>. Feel free to explore my 
             <a href="academic.html">Academic and Professional Background</a> 
             or 
             <a href="personal.html">Personal Background</a>.
         </p>
         <p>
             <span class="small-text">
-            In the meantime, please feel free to browse through my photography collection from over the years—I hope you enjoy them!
+            Here are my photographs from over the years—I hope you enjoy them!
             </span>
         </p>
     </section>
