--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <section class="intro">
         <h1>Hi, welcome to my homepage!</h1>
         <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>. Feel free to explore my 
-            <a href="academic.html">Academic and Professional Background</a> 
+            <a href="academic.html">academic and professional background</a> 
             or 
-            <a href="personal.html">Personal Background</a>.
+            <a href="personal.html">personal background</a>.
         </p>
         <p>
             <span class="small-text">
-            Here are my photographs from over the years—I hope you enjoy them!
+            Below are some of the photographs I've taken over the years—I hope you enjoy them!
             </span>
         </p>
     </section>
