--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <source srcset="photos/dolphin.webp" type="image/webp">
             <img src="photos/dolphin.webp" alt="Dolphin">
         </picture>
-        <picture data-location="Los Angeles, California">
+        <picture data-location="Baldwin Hills, California">
             <source srcset="photos/tree.webp" type="image/webp">
             <img src="photos/tree.webp" alt="Tree">
         </picture>
-        <picture data-location="Los Angeles, California">
+        <picture data-location="Baldwin Hills, California">
             <source srcset="photos/la-skyline-daylight.webp" type="image/webp">
             <img src="photos/la-skyline-daylight.webp" alt="LA Skyline Daylight">
         </picture>
-        <picture data-location="Los Angeles, California">
+        <picture data-location="Glendale, California">
             <source srcset="photos/griffith.webp" type="image/webp">
             <img src="photos/griffith.webp" alt="Griffith">
         </picture>
-        <picture data-location="Los Angeles, California">
+        <picture data-location="Downtown Los Angeles, California">
             <source srcset="photos/la-city-light.webp" type="image/webp">
             <img src="photos/la-city-light.webp" alt="LA City Light">
         </picture>
