--- a/academic.html
+++ b/academic.html
@@ -36,7 +36,7 @@
             where I focused on using data science tools to improve workflow efficiency. 
             I developed a dashboard to track the evolution of key parameters
             —such as book value and option-adjusted spread—for the company’s $6 billion portfolio in asset-backed securities. 
-            Using Bloomberg Python API, I fully automated the market data watchlist update process, 
+            Using the Bloomberg Python API, I fully automated the market data watchlist update process, 
             reducing manual effort and enabling real-time data access. 
             This experience reinforced my interest in applying data-driven solutions to investment.
         </p>
