--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
         <p>
             <span class="small-text">
-            Below are some of the photographs I've taken over the years—I hope you enjoy them!
+            Below are some of the photographs I've taken over the years, and I hope you enjoy them!
             </span>
         </p>
     </section>
