--- a/personal.html
+++ b/personal.html
@@ -21,7 +21,7 @@
             If you're in Los Angeles and craving authentic Sichuan hotpot, I recommend trying <a href="https://en.wikipedia.org/wiki/Haidilao">海底捞 (Haidilao)</a>—they have locations in many major cities in the US, though Chengdu boasts even better hotpot options.
         </p>
         <p>
-            Football (soccer) has been one of my lifelong passions, with a deep-rooted love for Chelsea Football Club that began in 2014 after visiting Stamford Bridge for the first time. 
+            Football (soccer) has been one of my lifelong passions. My deep-rooted love for Chelsea Football Club began in 2014 after visiting Stamford Bridge for the first time. 
             While my childhood dream was to become a football commentator, I’ve long accepted that I’m better at watching football than playing it. 
             However, I do have a knack for tennis, a sport I’ve been playing since I was nine. 
             Since moving to the U.S. for college, I’ve also developed a love for hockey and now closely follow the NHL.
@@ -32,7 +32,7 @@
             for their masterful storytelling and stunning visuals. 
             I also have a passion for photography—while I used to bring my Fujifilm XPro3 on every trip, 
             I’ve recently embraced the convenience of phone photography, 
-            carrying my camera less often but still capturing moments wherever I go.
+            carrying my Fujifilm less often but still capturing moments wherever I go.
         </p>
 
         <p><a href="index.html">Back to Home</a></p>
